[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlt-pipelines"
version = "0.1.0"
description = "Data pipelines using dlt (data load tool)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dlt[duckdb]>=0.4.0",
    "pendulum>=2.1.0",
    "prefect>=3.4.22",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "marimo>=0.16.5",
    "dlt[workspace]>=1.17.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


